--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,58 +5,50 @@
 *,
 *::after,
 *::before {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-	font-family: "Roboto", sans-serif;
-	font-size: 15px;
-	margin: 0;
-	padding: 0;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
 }
 
 #root {
-	/* Make it fullscreen */
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	overflow-x: hidden;
-	overflow-y: auto;
-
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-#app {
-	min-height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
+.main {
+    width: 100%;
+    min-height: 100vh;
+    height: 100%;
 }
 
 ::-webkit-file-upload-button {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 // react select
 // error border
 .react-select-error__control {
-	border: 1px solid #ff5b49 !important;
+    border: 1px solid #ff5b49 !important;
 }
 
 // sweetalert2
 // bring above modals
 .swal2-container {
-	z-index: 1100 !important;
+    z-index: 1100 !important;
 }
 
 // react-tooltip
 .styles-module_tooltip__mnnfp {
-	font-size: 85% !important;
+    font-size: 85% !important;
 }
 
 .rc-tooltip {
-	z-index: 1091;
+    z-index: 1091;
 }
